Bug 428710 - Context menu outline disappears with light color schemes
Summary: Context menu outline disappears with light color schemes
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.20.2
Platform: Arch Linux Linux
: HI minor
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: regression
: 429949 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-05 02:35 UTC by PhilipB
Modified: 2021-01-15 16:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments
Bug Behavior (1.55 MB, image/png)
2020-11-05 02:35 UTC, PhilipB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description PhilipB 2020-11-05 02:35:09 UTC
Created attachment 133043 [details]
Bug Behavior

SUMMARY

Context menu outline disappears with light color schemes

STEPS TO REPRODUCE

1- Select light based color scheme and Apply

2- Open context menu anywhere in plasma shell

OBSERVED RESULT

Menu outline isn't visible and other elements that cover the area of the outline appear to "stick out".

EXPECTED RESULT

Menu outline should appear as it does with dark based color schemes.

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 5.20.2
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1

ADDITIONAL INFORMATION

This affects all light color schemes, 3rd party too.

Inside Qt Widget apps the bug doesn't appear.
Comment 1 Nate Graham 2020-11-05 13:55:47 UTC
Can confirm.
Comment 2 Nate Graham 2020-11-05 13:56:41 UTC
I wonder if this, like Bug 428095, is another regression from fixing bug 399680.
Comment 3 Nate Graham 2020-12-03 19:28:36 UTC
*** Bug 429949 has been marked as a duplicate of this bug. ***
Comment 4 David Redondo 2021-01-15 08:09:18 UTC
Is it only the plasma shell menu and menus for example in Dolphin are fine or all menus affected?
Comment 5 Bug Janitor Service 2021-01-15 13:59:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/69
Comment 6 Nate Graham 2021-01-15 16:18:38 UTC
Git commit 20602d44341fd11de5a8221aa739ad35f1fcc988 by Nate Graham, on behalf of David Redondo.
Committed on 15/01/2021 at 16:18.
Pushed by ngraham into branch 'master'.

Restore correct menu border color

cac4b544dbbadc5bcd57ae37ac333383bf44c2ab introduced drawing separators
of transparent QMenus with WindowText color with 0.25 opacity. While the change
in drawMenuItemControl uses the correct condition, drawPanelMenuPrimitive
checked whether the widget had an alpha channel. This is wrong because we set
Qt::WA_TranslucentBackground always on all menus. The very low opacity made it
look like the section headers, separators and highlight were drawing outside of
the menu.

M  +2    -2    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/commit/20602d44341fd11de5a8221aa739ad35f1fcc988